--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,7 +4,7 @@ h1 {
 }
 
 body {
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .gallery {
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 2.5rem;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .display-4 {
     font-size: 3rem;
   }
@@ -102,11 +102,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .blog-footer {
   padding: 2.5rem 0;
+  margin-top: 10rem;
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
 }
