--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,6 +19,11 @@ body {
   height: 480px;
 }
 
+.displayed-img {
+  width: 640px;
+  height: 480px;
+}
+
 .overlay {
   position: absolute;
   top: 0;
