--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,117 +1,89 @@
-h1 {
-  font-family: helvetica, arial, sans-serif;
-  text-align: center;
-}
-
+/* GLOBAL STYLES */
 body {
   padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #5231A1;
+  background-color: #fff;
 }
 
-.gallery {
-  width: 640px;
-  margin: 0 auto;
+/* CUSTOMIZE THE CAROUSEL */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
 }
 
-.full-img {
-  position: relative;
-  display: block;
-  width: 640px;
-  height: 480px;
+/* Declare heights because of positioning of img element */
+
+.carousel-item {
+  height: 32rem;
 }
 
-.displayed-img {
-  position: relative;
-  display: block;
-  width: 640px;
-  height: 480px;
-}
-
-.overlay {
+.carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 640px;
-  height: 480px;
-  background-color: rgba(0,0,0,0);
+  min-width: 100%;
+  height: 32rem;
 }
 
-button {
-  border: 0;
-  background: rgba(150,150,150,0.6);
-  text-shadow: 1px 1px 1px white;
-  border: 1px solid #999;
-  position: absolute;
-  cursor: pointer;
-  top: 2px;
-  left: 2px;
-}
-
-.thumb-bar img {
+.btn-primary {
   display: block;
-  width: 20%;
-  float: left;
-  cursor: pointer;
+  background-color: #B8AAFF;
+  border-color: #5231A1;
+  color: #5231A1;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.blog-header {
+.modal-body {
+  text-align: center; }
+  .modal-body img {
+    padding: 25px; }
+
+/* Featurettes */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
   line-height: 1;
-  border-bottom: 1px solid #e5e5e5;
+  letter-spacing: -.05rem;
+  color: #6D0047;
 }
 
-.blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-  font-size: 2.25rem;
+h2 span {
+  color: #C00476;
 }
 
-.blog-header-logo:hover {
-  text-decoration: none;
-}
+/* RESPONSIVE CSS */
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-}
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
 
-.display-4 {
-  font-size: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .display-4 {
-    font-size: 3rem;
+  .featurette-heading {
+    font-size: 50px;
   }
 }
 
-.nav-scroller {
-  position: relative;
-  z-index: 2;
-  height: 2.75rem;
-  overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-}
-
-.nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
-}
-
-.blog-footer {
-  padding: 2.5rem 0;
-  margin-top: 10rem;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
 }
