--- a/css/styles.scss
+++ b/css/styles.scss
@@ -63,6 +63,14 @@ body {
   color: #6D0047;
 }
 
+.featurette {
+width: 1200px;
+align-items: center;
+margin-left: 5%;
+padding-top: 25px;
+padding-bottom: 25px;
+}
+
 h2 span {
   color: #C00476;
 }
