--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,9 +67,8 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 1200px;
-  align-items: center;
-  margin-left: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
   padding-top: 25px;
   padding-bottom: 25px;
 }
