--- a/css/styles.scss
+++ b/css/styles.scss
@@ -65,7 +65,7 @@ body {
 
 .featurette {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   margin-left: 10%;
   margin-right: 10%;
