--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
 
 .featurette {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   margin-left: 10%;
   margin-right: 10%;
