--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   margin-left: 10%;
-  margin-right: 10%;
-  padding-top: 25px;
-  padding-bottom: 25px; }
+  margin-right: 10%; }
 
 h2 span {
   color: #C00476; }
