--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,6 +67,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10px;
